Removed selection from Roommates overview list. Closes #5

--- a/Roommates/Base.lproj/Main_iPhone.storyboard
+++ b/Roommates/Base.lproj/Main_iPhone.storyboard
@@ -978,7 +978,7 @@
         <scene sceneID="nED-FV-GM1">
             <objects>
                 <tableViewController id="p3R-Jx-8Gb" customClass="HouseholdMembersPFQueryTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="X4C-s9-Y1L">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="X4C-s9-Y1L">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
