--- a/Roommates/Base.lproj/Main_iPhone.storyboard
+++ b/Roommates/Base.lproj/Main_iPhone.storyboard
@@ -607,6 +607,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="wm2-Zk-Mmy">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
                             <action selector="pullToRefresh:" destination="X27-Ys-x0l" eventType="valueChanged" id="XuD-6C-Fnr"/>
                         </connections>
@@ -676,6 +677,7 @@
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="IKz-Ax-hZs">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
                             <action selector="pullToRefresh:" destination="6RK-R0-4Qx" eventType="valueChanged" id="QUp-CH-Dg3"/>
                         </connections>
@@ -1486,6 +1488,7 @@
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Hqr-fn-Xdj">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
                             <action selector="pull:" destination="hCX-q5-9bq" eventType="valueChanged" id="MYk-X7-jaS"/>
                         </connections>
