--- a/Roommates/Base.lproj/Main_iPhone.storyboard
+++ b/Roommates/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="uzb-4h-EIQ">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -398,7 +397,7 @@
                                 <rect key="frame" x="0.0" y="8" width="320" height="220"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <connections>
-                                    <segue destination="mSO-Lx-FHr" kind="embed" id="lYn-9U-8A2"/>
+                                    <segue destination="E8o-nA-v7A" kind="embed" id="C3q-AW-OrC"/>
                                 </connections>
                             </containerView>
                         </subviews>
@@ -427,25 +426,71 @@
             </objects>
             <point key="canvasLocation" x="1476" y="-479"/>
         </scene>
-        <!--All Notes-->
-        <scene sceneID="Xd8-MR-Lm5">
+        <!--Note Table View Controller-->
+        <scene sceneID="ccZ-wL-wrR">
             <objects>
-                <tableViewController id="mSO-Lx-FHr" customClass="AllNotesPFQueryTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="WKU-OW-2v8">
+                <tableViewController id="E8o-nA-v7A" customClass="NoteTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="NtH-ii-Ki0">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NoteCellIdentifier" rowHeight="166" id="oql-lm-we1" customClass="NoteUITableViewCell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oql-lm-we1" id="dkn-DT-edf">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kvs-pI-kyS" customClass="PFImageView">
+                                            <rect key="frame" x="8" y="8" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="Ycv-7k-wc5"/>
+                                                <constraint firstAttribute="height" constant="30" id="naa-mr-btZ"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2D-60-fUu">
+                                            <rect key="frame" x="51" y="47" width="261" height="110"/>
+                                            <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="Display Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l2W-pU-rYJ">
+                                            <rect key="frame" x="51" y="8" width="261" height="29"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="l2W-pU-rYJ" firstAttribute="top" secondItem="kvs-pI-kyS" secondAttribute="top" id="03z-RN-ezX"/>
+                                        <constraint firstItem="R2D-60-fUu" firstAttribute="bottom" secondItem="dkn-DT-edf" secondAttribute="bottomMargin" id="2SR-g5-pex"/>
+                                        <constraint firstItem="kvs-pI-kyS" firstAttribute="top" secondItem="dkn-DT-edf" secondAttribute="topMargin" id="3KG-Gp-hpk"/>
+                                        <constraint firstItem="R2D-60-fUu" firstAttribute="top" secondItem="l2W-pU-rYJ" secondAttribute="bottom" constant="10" id="6Dh-yO-66U"/>
+                                        <constraint firstItem="l2W-pU-rYJ" firstAttribute="bottom" secondItem="kvs-pI-kyS" secondAttribute="bottom" constant="-1" id="9IQ-m0-cd2"/>
+                                        <constraint firstItem="l2W-pU-rYJ" firstAttribute="top" secondItem="dkn-DT-edf" secondAttribute="topMargin" id="THG-iY-2Vm"/>
+                                        <constraint firstItem="R2D-60-fUu" firstAttribute="trailing" secondItem="l2W-pU-rYJ" secondAttribute="trailing" id="aF1-6H-QrU"/>
+                                        <constraint firstItem="l2W-pU-rYJ" firstAttribute="leading" secondItem="R2D-60-fUu" secondAttribute="leading" id="cyW-dT-dkd"/>
+                                        <constraint firstItem="l2W-pU-rYJ" firstAttribute="leading" secondItem="kvs-pI-kyS" secondAttribute="trailing" constant="13" id="fqk-Tg-Bid"/>
+                                        <constraint firstItem="kvs-pI-kyS" firstAttribute="leading" secondItem="dkn-DT-edf" secondAttribute="leadingMargin" id="wRc-qp-32h"/>
+                                        <constraint firstItem="l2W-pU-rYJ" firstAttribute="trailing" secondItem="dkn-DT-edf" secondAttribute="trailingMargin" id="z8Z-MB-Q4c"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="displayName" destination="l2W-pU-rYJ" id="DIc-eD-xT6"/>
+                                    <outlet property="noteBody" destination="R2D-60-fUu" id="WCJ-Wi-29l"/>
+                                    <outlet property="profilePicture" destination="kvs-pI-kyS" id="bvX-M3-cB6"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="mSO-Lx-FHr" id="FXb-6E-4Wh"/>
-                            <outlet property="delegate" destination="mSO-Lx-FHr" id="q6Y-Vc-BBV"/>
+                            <outlet property="dataSource" destination="E8o-nA-v7A" id="3Dw-eB-fSD"/>
+                            <outlet property="delegate" destination="E8o-nA-v7A" id="2cg-Ic-jH0"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="All Notes" id="S4x-bb-HFX"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TlU-5N-7a0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b7W-TI-iQd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2073" y="-458"/>
+            <point key="canvasLocation" x="1825" y="-1022"/>
         </scene>
         <!--Edit Profile-->
         <scene sceneID="T1H-Oy-Lw6">
